# nepi_templates

./: README.md
nepi_apps/: APP_ARCHITECTURE.md  APP_PATTERNS.md  APP_STRUCTURE.md  GETTING_STARTED.md  deploy_nepi_apps.sh
nepi_apps/connect_examples/: README.md  deploy_nepi_apps.sh
nepi_apps/connect_examples/nepi_app_data_connect/: CMakeLists.txt  package.xml
nepi_apps/connect_examples/nepi_app_data_connect/api/: connect_app_data_connect.py
nepi_apps/connect_examples/nepi_app_data_connect/msg/: NepiAppDataConnectStatus.msg
nepi_apps/connect_examples/nepi_app_data_connect/params/: data_connect_app_params.yaml
nepi_apps/connect_examples/nepi_app_data_connect/rui/: NepiAppDataConnect.js
nepi_apps/connect_examples/nepi_app_data_connect/scripts/: data_connect_app_node.py
nepi_apps/connect_examples/nepi_app_idx_connect/: CMakeLists.txt  package.xml  setup_new_app.sh
nepi_apps/connect_examples/nepi_app_idx_connect/api/: connect_app_idx_connect.py
nepi_apps/connect_examples/nepi_app_idx_connect/msg/: NepiAppIDXConnectStatus.msg
nepi_apps/connect_examples/nepi_app_lsx_connect/: CMakeLists.txt  LICENSE  package.xml  setup_new_app.sh
nepi_apps/connect_examples/nepi_app_motor_connect/: CMakeLists.txt  package.xml
nepi_apps/connect_examples/nepi_app_npx_connect/: CMakeLists.txt  package.xml  setup_new_app.sh
nepi_apps/connect_examples/nepi_app_pan_tilt_connect/: CMakeLists.txt  package.xml  setup_new_app.sh
nepi_apps/nepi_app_template/: CMakeLists.txt  package.xml  setup_new_app.sh
nepi_apps/nepi_app_template/api/: connect_app_template.py
nepi_apps/nepi_app_template/msg/: NepiAppTemplateStatus.msg
nepi_apps/nepi_app_template/params/: template_app_params.yaml
nepi_apps/nepi_app_template/rui/: NepiAppTemplate.js
nepi_apps/nepi_app_template/scripts/: template_app_node.py
nepi_drivers/: DRIVER_ARCHITECTURE.md  DRIVER_STRUCTURE.md  GETTING_STARTED.md  deploy_nepi_drivers.sh
nepi_drivers/idx_template/: idx_template_discovery.py  idx_template_driver.py  idx_template_node.py  idx_template_params.yaml
nepi_drivers/lsx_template/: lsx_template_discovery.py  lsx_template_node.py  lsx_template_params.yaml
nepi_drivers/npx_template/: npx_template_discovery.py  npx_template_node.py  npx_template_params.yaml
nepi_drivers/ptx_template/: ptx_template_discovery.py  ptx_template_node.py  ptx_template_params.yaml  setup_new_driver.sh
nepi_drivers/rbx_template/: rbx_template_discovery.py  rbx_template_node.py  rbx_template_params.yaml
nepi_scripts/: GETTING_STARTED.md  SCRIPT_ARCHITECTURE.md  SCRIPT_STRUCTURE.md  deploy_nepi_scripts.sh  setup_new_script.sh  template_script_node.py  template_script_task.py
(+23 files in other folders)
